Colored QFrame#horizontalLineMiddleSeparator

--- a/indigo.qss
+++ b/indigo.qss
@@ -26,8 +26,9 @@ QGroupBox::title {
 }
 /* ---------------------------------------------------------------------------------------------------- */
 
-
-
+QFrame#horizontalLineMiddleSeparator {
+    background-color: rgb(80, 80, 200 );
+}
 
 /* Process Scanner QFrame horizontal lines  */
 /* ---------------------------------------------------------------------------------------------------- */
